--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     Hello World
   </h1>  
 
+  <button type="button" onclick="myfunction()" style="cursor: pointer;"> Click Me!</button>
+
+  <p id="demo"></p>
+
   </body>
   <script type="text/javascript" src="js/main.js" ></script>
 </html>
