--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     Hello World
   </h1>  
 
-  <button type="button" onclick="myfunction()" style="cursor: pointer;"> Click Me!</button>
-
+  <button type="button" onclick="myfunction()" style="cursor: pointer; font-size: medium;"> Click Me!</button>
   <p id="demo"></p>
+
+  <h2 id="text"></h2>
+
+  <p id="obj"></p>
 
   </body>
   <script type="text/javascript" src="js/main.js" ></script>
