--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -13,13 +12,68 @@
     Hello World
   </h1>  
 
-  <button type="button" onclick="myfunction()" style="cursor: pointer; font-size: medium;"> Click Me!</button>
-  <p id="demo"></p>
+  <!-- <button type="button" onclick="myfunction()" style="cursor: pointer; font-size: medium;"> Click Me!</button>
+  <p id="demo"></p> -->
 
   <h2 id="text"></h2>
 
   <p id="obj"></p>
+  
+    <!-- <div id="calculator" class="calc">
+      <input class="content" type="text" id="display" readonly>
+      <div id="buttons" class="btn">
+        <button onclick="clearDisplay()">AC</button>
+        <button onclick="ToDisplay('')">DEL</button>
+        <button onclick="ToDisplay('/')">/</button>
+        <button onclick="ToDisplay('1')">1</button>
+        <button onclick="ToDisplay('2')">2</button>
+        <button onclick="ToDisplay('3')">3</button>
+        <button onclick="ToDisplay('*')">*</button>
+        <button onclick="ToDisplay('4')">4</button>
+        <button onclick="ToDisplay('5')">5</button>
+        <button onclick="ToDisplay('6')">6</button>
+        <button onclick="ToDisplay('+')">+</button>
+        <button onclick="ToDisplay('7')">7</button>
+        <button onclick="ToDisplay('8')">8</button>
+        <button onclick="ToDisplay('9')">9</button>
+        <button onclick="ToDisplay('-')">-</button>
+        <button onclick="ToDisplay('.')">.</button>
+        <button onclick="ToDisplay('0')">0</button>
+        <button onclick="calculateResult()">=</button>
+      </div>
+    </div> -->
+
+   
+    <div class="calculator">
+        <div class="display">
+            <input type="text" id="result" readonly>
+        </div>
+        <div class="buttons">
+            <button class="operator" id="clear">C</button>
+            <button class="operator" id="backspace">←</button>
+            <button class="operator" id="divide">/</button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button class="operator" id="multiply">*</button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button class="operator" id="subtract">-</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button class="operator" id="add">+</button>
+            <button id="zero">0</button>
+            <button id="decimal">.</button>
+            <button class="operator" id="calculate">=</button>
+        </div>
+    </div>
+
+
+
 
   </body>
   <script type="text/javascript" src="js/main.js" ></script>
+  <script src="js2/calculator.js"></script>
 </html>
